--- a/app/src/main/res/drawable-xxhdpi/stylo_bode_editex2.xml
+++ b/app/src/main/res/drawable-xxhdpi/stylo_bode_editex2.xml
@@ -2,8 +2,11 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <corners android:radius="10dp" />
+    <corners android:radius="10dp"
+        />
     <stroke
-        android:width="5px"
-        android:color="@android:color/holo_red_dark" />
+        android:width="7px"
+        android:color="@android:color/holo_red_dark"
+
+        />
 </shape>
