--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -15,7 +15,7 @@
         android:id="@+id/imageView2"
         android:layout_width="match_parent"
         android:layout_height="223dp"
-        app:srcCompat="@drawable/splash_icon" />
+        app:srcCompat="@drawable/ic_deliveryman" />
 
     <TextView
         android:id="@+id/textView6"
