--- a/app/src/main/res/layout/activity_register1.xml
+++ b/app/src/main/res/layout/activity_register1.xml
@@ -12,153 +12,161 @@
     <ImageView
         android:id="@+id/imageViewLogo"
         android:layout_width="match_parent"
-        android:layout_height="186dp"
+        android:layout_height="200dp"
         android:layout_marginBottom="10dp"
         android:layout_weight="20"
-
         app:srcCompat="@drawable/ic_logoregister" />
 
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="259dp"
-        android:layout_height="32dp"
-        android:layout_weight="1"
-        android:gravity="center_vertical"
-        android:scrollbarThumbHorizontal="@color/negro"
-        android:scrollbarThumbVertical="@color/negro"
-        android:text="Nombre"
-        android:textColor="#000000"
-        android:fontFamily="@font/comickings"
-        />
+   <ScrollView
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content">
+       <LinearLayout
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:orientation="vertical">
+           <TextView
+               android:id="@+id/textView1"
+               android:layout_width="259dp"
+               android:layout_height="32dp"
+               android:layout_weight="1"
+               android:gravity="center_vertical"
+               android:scrollbarThumbHorizontal="@color/negro"
+               android:scrollbarThumbVertical="@color/negro"
+               android:text="Nombre"
+               android:textColor="#000000"
+               android:fontFamily="@font/comickings"
+               />
 
-    <EditText
-        android:id="@+id/editTextFN"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="45dp"
-        android:layout_marginRight="45dp"
-        android:layout_marginBottom="15dp"
-        android:layout_weight="4"
-        android:background="@drawable/sty_border_editext"
-        android:drawableLeft="@drawable/ic_user3"
-        android:drawablePadding="5dp"
-        android:ems="10"
-        android:hint="Nombre"
-        android:inputType="textPersonName"
-        android:textColorHint="@color/rojoClaro"
+           <EditText
+               android:id="@+id/editTextFN"
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:layout_marginLeft="45dp"
+               android:layout_marginRight="45dp"
+               android:layout_marginBottom="15dp"
+               android:layout_weight="4"
+               android:background="@drawable/sty_border_editext"
+               android:drawableLeft="@drawable/ic_user3"
+               android:drawablePadding="5dp"
+               android:ems="10"
+               android:hint="Nombre"
+               android:inputType="textPersonName"
+               android:textColorHint="@color/rojoClaro"
 
-        />
+               />
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="259dp"
-        android:layout_height="29dp"
-        android:layout_weight="1"
-        android:text="Apellido"
-        android:textColor="#000000"
-        android:fontFamily="@font/comickings"
-        />
+           <TextView
+               android:id="@+id/textView2"
+               android:layout_width="259dp"
+               android:layout_height="29dp"
+               android:layout_weight="1"
+               android:text="Apellido"
+               android:textColor="#000000"
+               android:fontFamily="@font/comickings"
+               />
 
-    <EditText
-        android:id="@+id/editTextCorreo"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="45dp"
-        android:layout_marginRight="45dp"
-        android:layout_marginBottom="15dp"
-        android:layout_weight="4"
-        android:background="@drawable/sty_border_editext"
-        android:drawableLeft="@drawable/ic_user3"
-        android:drawablePadding="10dp"
-        android:ems="10"
-        android:hint="Correo"
-        android:inputType="textPersonName"
-        android:textColorHint="@color/rojoClaro"
+           <EditText
+               android:id="@+id/editTextCorreo"
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:layout_marginLeft="45dp"
+               android:layout_marginRight="45dp"
+               android:layout_marginBottom="15dp"
+               android:layout_weight="4"
+               android:background="@drawable/sty_border_editext"
+               android:drawableLeft="@drawable/ic_user3"
+               android:drawablePadding="10dp"
+               android:ems="10"
+               android:hint="Correo"
+               android:inputType="textPersonName"
+               android:textColorHint="@color/rojoClaro"
 
-        />
+               />
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="269dp"
-        android:layout_height="31dp"
-        android:layout_weight="1"
-        android:text="Tipo de Documento"
-        android:textColor="#000000"
-        android:fontFamily="@font/comickings"
-        />
+           <TextView
+               android:id="@+id/textView3"
+               android:layout_width="269dp"
+               android:layout_height="31dp"
+               android:layout_weight="1"
+               android:text="Tipo de Documento"
+               android:textColor="#000000"
+               android:fontFamily="@font/comickings"
+               />
 
-    <EditText
-        android:id="@+id/editTextDir"
-        android:layout_width="match_parent"
-        android:layout_height="61dp"
-        android:layout_marginLeft="45dp"
-        android:layout_marginRight="45dp"
-        android:layout_marginBottom="15dp"
-        android:layout_weight="4"
-        android:background="@drawable/sty_border_editext"
-        android:drawableLeft="@drawable/ic_user"
-        android:drawablePadding="10dp"
-        android:ems="10"
-        android:hint="Tipo de Documento"
-        android:inputType="textPersonName"
-        android:textColorHint="@color/rojoClaro"
+           <EditText
+               android:id="@+id/editTextDir"
+               android:layout_width="match_parent"
+               android:layout_height="61dp"
+               android:layout_marginLeft="45dp"
+               android:layout_marginRight="45dp"
+               android:layout_marginBottom="15dp"
+               android:layout_weight="4"
+               android:background="@drawable/sty_border_editext"
+               android:drawableLeft="@drawable/ic_user"
+               android:drawablePadding="10dp"
+               android:ems="10"
+               android:hint="Tipo de Documento"
+               android:inputType="textPersonName"
+               android:textColorHint="@color/rojoClaro"
 
-        />
+               />
 
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="261dp"
-        android:layout_height="32dp"
-        android:layout_weight="1"
-        android:text="Documento"
-        android:textColor="#000000"
-        android:fontFamily="@font/comickings"
-        />
+           <TextView
+               android:id="@+id/textView4"
+               android:layout_width="261dp"
+               android:layout_height="32dp"
+               android:layout_weight="1"
+               android:text="Documento"
+               android:textColor="#000000"
+               android:fontFamily="@font/comickings"
+               />
 
 
-    <EditText
-        android:id="@+id/editTextPassword"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="45dp"
-        android:layout_marginRight="45dp"
-        android:layout_marginBottom="15dp"
-        android:layout_weight="4"
-        android:background="@drawable/sty_border_editext"
-        android:drawableLeft="@drawable/ic_user2"
-        android:drawablePadding="10dp"
-        android:ems="10"
-        android:hint="Número de Documento"
-        android:inputType="textPersonName"
-        android:textColorHint="@color/rojoClaro"
+           <EditText
+               android:id="@+id/editTextPassword"
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:layout_marginLeft="45dp"
+               android:layout_marginRight="45dp"
+               android:layout_marginBottom="15dp"
+               android:layout_weight="4"
+               android:background="@drawable/sty_border_editext"
+               android:drawableLeft="@drawable/ic_user2"
+               android:drawablePadding="10dp"
+               android:ems="10"
+               android:hint="Número de Documento"
+               android:inputType="textPersonName"
+               android:textColorHint="@color/rojoClaro"
 
-        />
+               />
 
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="259dp"
-        android:layout_height="33dp"
-        android:layout_weight="1"
-        android:text="Celular"
-        android:textColor="#000000"
-        android:fontFamily="@font/comickings"
-        />
+           <TextView
+               android:id="@+id/textView5"
+               android:layout_width="259dp"
+               android:layout_height="33dp"
+               android:layout_weight="1"
+               android:text="Celular"
+               android:textColor="#000000"
+               android:fontFamily="@font/comickings"
+               />
 
-    <EditText
-        android:id="@+id/editTextConfPassword"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="45dp"
-        android:layout_marginRight="45dp"
-        android:layout_marginBottom="45dp"
-        android:layout_weight="4"
-        android:background="@drawable/sty_border_editext"
-        android:drawableLeft="@drawable/ic_cel"
-        android:drawablePadding="10dp"
-        android:ems="10"
-        android:hint="Número de Celular"
-        android:inputType="textPassword"
-        android:textColorHint="@color/rojoClaro" />
+           <EditText
+               android:id="@+id/editTextConfPassword"
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:layout_marginLeft="45dp"
+               android:layout_marginRight="45dp"
+               android:layout_marginBottom="45dp"
+               android:layout_weight="4"
+               android:background="@drawable/sty_border_editext"
+               android:drawableLeft="@drawable/ic_cel"
+               android:drawablePadding="10dp"
+               android:ems="10"
+               android:hint="Número de Celular"
+               android:inputType="textPassword"
+               android:textColorHint="@color/rojoClaro" />
+       </LinearLayout>
+   </ScrollView>
 
     <Button
         android:id="@+id/buttonSiguiente"
