--- a/app/src/main/res/layout-land/activity_login.xml
+++ b/app/src/main/res/layout-land/activity_login.xml
@@ -81,7 +81,7 @@
         android:layout_marginRight="45dp"
         android:layout_marginBottom="10dp"
         android:layout_weight="2"
-        android:background="@drawable/btn_style3"
+        android:background="@drawable/btn_stylef3"
         android:text="@string/ingresar"
         android:textColor="@drawable/txt_btn_style3"
 
@@ -96,7 +96,7 @@
         android:layout_marginRight="45dp"
         android:layout_marginBottom="50dp"
         android:layout_weight="2"
-        android:background="@drawable/btn_style3"
+        android:background="@drawable/btn_stylef3"
         android:text="@string/registrarse"
         android:textColor="@drawable/txt_btn_style3"
 
