--- a/app/src/main/res/layout/fragment_alerta_exit.xml
+++ b/app/src/main/res/layout/fragment_alerta_exit.xml
@@ -4,7 +4,7 @@
     android:layout_height="140dp"
     android:layout_marginLeft="95dp"
     android:layout_marginTop="250dp"
-    android:background="@drawable/btn_style3">
+    android:background="@drawable/btn_stylef3">
 
     <TextView
         android:id="@+id/textView3"
