--- a/app/src/main/res/layout/activity_register2.xml
+++ b/app/src/main/res/layout/activity_register2.xml
@@ -1,220 +1,249 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:gravity="center"
-    android:padding="10dp"
-    tools:context=".Register2Activity"
-
-    >
+    tools:context=".Register2Activity">
 
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="match_parent"
-        android:layout_height="113dp"
-        android:layout_weight="1"
-        android:layout_marginBottom="0dp"
+        android:layout_width="0dp"
+        android:layout_height="150dp"
+        android:layout_gravity="center"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.809"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_logoregisterblue" />
 
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="264dp"
-        android:layout_height="30dp"
-        android:layout_weight="1"
-        android:scrollbarThumbHorizontal="@color/negro"
-        android:scrollbarThumbVertical="@color/negro"
-        android:text="Fecha de Nacimiento"
-        android:textColor="#000000"
-
-        />
-
-    <EditText
-        android:id="@+id/etPlannedDate"
-        android:layout_width="260dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="45dp"
-        android:layout_marginRight="45dp"
-        android:layout_marginBottom="15dp"
-        android:layout_weight="3"
-        android:background="@drawable/sty_border_editext"
-        android:drawableLeft="@drawable/ic_calendar"
-        android:drawablePadding="10dp"
-        android:ems="10"
-        android:hint="@string/report_planned_date"
-        android:inputType="date"
-
-        android:focusable="false"
-        android:clickable="true"
-        android:maxLines="1"
-
-        android:textColorHint="@color/rojoClaro"
-        />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="257dp"
-        android:layout_height="34dp"
-        android:layout_weight="1"
-        android:text="Correo"
-        android:textColor="#000000"
-
-        />
-
-    <EditText
-        android:id="@+id/editTextCorreo"
-        android:layout_width="261dp"
-        android:layout_height="76dp"
-        android:layout_marginLeft="45dp"
-        android:layout_marginRight="45dp"
-        android:layout_marginBottom="15dp"
-        android:layout_weight="3"
-        android:background="@drawable/sty_border_editext"
-        android:drawableLeft="@drawable/ic_email"
-        android:drawablePadding="10dp"
-        android:ems="10"
-        android:hint="Correo"
-        android:inputType="textPersonName"
-        android:textColorHint="@color/rojoClaro"
-
-        />
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="258dp"
-        android:layout_height="33dp"
-        android:layout_weight="1"
-        android:text="Dirección"
-        android:textColor="#000000"
-
-        />
-
-    <EditText
-        android:id="@+id/editTextDir"
-        android:layout_width="259dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="45dp"
-        android:layout_marginRight="45dp"
-        android:layout_marginBottom="10dp"
-        android:layout_weight="3"
-        android:background="@drawable/sty_border_editext"
-        android:drawableLeft="@drawable/ic_home"
-        android:drawablePadding="10dp"
-        android:ems="10"
-        android:hint="Dirección"
-        android:inputType="textPersonName"
-        android:textColorHint="@color/rojoClaro"
-
-        />
-
-    <TextView
-        android:id="@+id/textView8"
-        android:layout_width="293dp"
-        android:layout_height="30dp"
-        android:text="Genero"
-        android:textColor="#000000"
-
-        />
-
-    <RadioGroup
-        android:layout_width="302dp"
-        android:layout_height="52dp"
-        android:layout_marginBottom="5dp"
-        android:orientation="horizontal">
-
-        <RadioButton
-            android:id="@+id/radio_masculino"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="16dp"
-            android:checked="true"
-            android:text="Masculino"
-
-            android:buttonTint="@color/rojo"
-            />
-
-        <RadioButton
-            android:id="@+id/radio_femenino"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:checked="false"
-            android:text="Femenino"
-
-            android:buttonTint="@color/rojo"
-            />
-    </RadioGroup>
-
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="250dp"
-        android:layout_height="35dp"
-        android:layout_weight="1"
-        android:text="Contraseña"
-        android:textColor="#000000"
-
-        />
-
-
-    <EditText
-        android:id="@+id/editTextPassword"
-        android:layout_width="254dp"
-        android:layout_height="68dp"
-        android:layout_marginLeft="45dp"
-        android:layout_marginRight="45dp"
-        android:layout_marginBottom="15dp"
-        android:layout_weight="3"
-        android:background="@drawable/sty_border_editext"
-        android:drawableLeft="@drawable/ic_padlock"
-        android:drawablePadding="10dp"
-        android:ems="10"
-        android:hint="Contraseña"
-        android:inputType="textPersonName"
-        android:textColorHint="@color/rojoClaro"
-
-        />
-
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="247dp"
-        android:layout_height="30dp"
-        android:layout_weight="1"
-
-        android:text="Confirmar Contraseña"
-        android:textColor="#000000" />
-
-    <EditText
-        android:id="@+id/editTextConfPassword"
-        android:layout_width="255dp"
-        android:layout_height="66dp"
-        android:layout_marginLeft="45dp"
-        android:layout_marginRight="45dp"
-        android:layout_marginBottom="20dp"
-        android:layout_weight="3"
-        android:background="@drawable/sty_border_editext"
-        android:drawableLeft="@drawable/ic_padlock"
-        android:drawablePadding="10dp"
-        android:ems="10"
-        android:hint="Confirmar Contraseña"
-        android:inputType="textPassword"
-        android:textColorHint="@color/rojoClaro" />
 
     <Button
         android:id="@+id/buttonRegistrarse"
-        android:layout_width="149dp"
-        android:layout_height="62dp"
-        android:layout_marginLeft="45dp"
-        android:layout_marginRight="45dp"
+        android:layout_width="175dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:layout_marginBottom="20dp"
-        android:layout_weight="3"
         android:background="@drawable/btn_style1"
-
         android:text="Finalizar"
         android:textColor="@drawable/txt_btn_style2"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
-        />
+    <ScrollView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="10dp"
+        android:scrollbars="none"
+        app:layout_constraintBottom_toTopOf="@+id/buttonRegistrarse"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/textView1"
+                android:layout_width="wrap_content"
+                android:layout_height="32dp"
+                android:layout_marginLeft="20dp"
+                android:fontFamily="@font/nimbusbol"
+                android:gravity="center|center_vertical"
+                android:scrollbarThumbHorizontal="@color/negro"
+                android:scrollbarThumbVertical="@color/negro"
+                android:text="@string/date_birth"
+                android:textColor="#000000" />
+
+            <Button
+                android:id="@+id/etPlannedDate"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginBottom="15dp"
+                android:background="@drawable/sty_border_editext"
+                android:drawableLeft="@drawable/ic_calendar"
+                android:drawablePadding="5dp"
+                android:textAlignment="textStart"
+                android:ems="10"
+                android:fontFamily="@font/nimbusreg"
+                android:hint="@string/report_planned_date"
+                android:inputType="date"
+                android:textColorHint="@color/rojoClaro" />
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_height="32dp"
+                android:layout_marginLeft="20dp"
+                android:fontFamily="@font/nimbusbol"
+                android:gravity="center|center_vertical"
+                android:scrollbarThumbHorizontal="@color/negro"
+                android:scrollbarThumbVertical="@color/negro"
+                android:text="Correo"
+                android:textColor="#000000"
+
+                />
+
+            <EditText
+                android:id="@+id/editTextCorreo"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginBottom="15dp"
+                android:background="@drawable/sty_border_editext"
+                android:drawableLeft="@drawable/ic_email"
+                android:drawablePadding="5dp"
+                android:ems="10"
+                android:fontFamily="@font/nimbusreg"
+                android:hint="@string/email_user"
+                android:inputType="textEmailAddress"
+                android:textColorHint="@color/rojoClaro"
+                />
+
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="wrap_content"
+                android:layout_height="32dp"
+                android:layout_marginLeft="20dp"
+                android:fontFamily="@font/nimbusbol"
+                android:gravity="center|center_vertical"
+                android:scrollbarThumbHorizontal="@color/negro"
+                android:scrollbarThumbVertical="@color/negro"
+                android:text="Dirección"
+                android:textColor="#000000"
+
+                />
+
+            <EditText
+                android:id="@+id/editTextDir"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginBottom="15dp"
+                android:background="@drawable/sty_border_editext"
+                android:drawableLeft="@drawable/ic_home"
+                android:drawablePadding="5dp"
+                android:ems="10"
+                android:fontFamily="@font/nimbusreg"
+                android:hint="@string/address_user"
+                android:inputType="textPostalAddress"
+                android:textColorHint="@color/rojoClaro"
 
 
-</LinearLayout>
+                />
+
+            <TextView
+                android:id="@+id/textView8"
+                android:layout_width="wrap_content"
+                android:layout_height="32dp"
+                android:layout_marginLeft="20dp"
+                android:fontFamily="@font/nimbusbol"
+                android:gravity="center|center_vertical"
+                android:scrollbarThumbHorizontal="@color/negro"
+                android:scrollbarThumbVertical="@color/negro"
+                android:text="Genero"
+                android:textColor="#000000"
+
+                />
+
+            <RadioGroup
+                android:layout_width="302dp"
+                android:layout_height="52dp"
+                android:layout_marginBottom="5dp"
+                android:layout_marginLeft="20dp"
+                android:orientation="horizontal">
+
+                <RadioButton
+                    android:id="@+id/radio_masculino"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="16dp"
+                    android:buttonTint="@color/rojo"
+                    android:checked="true"
+                    android:text="Masculino" />
+
+                <RadioButton
+                    android:id="@+id/radio_femenino"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:buttonTint="@color/rojo"
+                    android:checked="false"
+                    android:text="Femenino" />
+            </RadioGroup>
+
+            <TextView
+                android:id="@+id/textView4"
+                android:layout_width="wrap_content"
+                android:layout_height="32dp"
+                android:layout_marginLeft="20dp"
+                android:fontFamily="@font/nimbusbol"
+                android:gravity="center|center_vertical"
+                android:scrollbarThumbHorizontal="@color/negro"
+                android:scrollbarThumbVertical="@color/negro"
+                android:text="Contraseña"
+                android:textColor="#000000"
+
+                />
+
+
+            <EditText
+                android:id="@+id/editTextPassword"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginBottom="15dp"
+                android:background="@drawable/sty_border_editext"
+                android:drawableLeft="@drawable/ic_padlock"
+                android:drawablePadding="5dp"
+                android:ems="10"
+                android:fontFamily="@font/nimbusreg"
+                android:hint="@string/password"
+                android:inputType="textPassword"
+                android:textColorHint="@color/rojoClaro"
+
+
+                />
+
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="wrap_content"
+                android:layout_height="32dp"
+                android:layout_marginLeft="20dp"
+                android:fontFamily="@font/nimbusbol"
+                android:gravity="center|center_vertical"
+                android:scrollbarThumbHorizontal="@color/negro"
+                android:scrollbarThumbVertical="@color/negro"
+                android:text="Confirmar Contraseña"
+                android:textColor="#000000" />
+
+            <EditText
+                android:id="@+id/editTextConfPassword"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginBottom="15dp"
+                android:background="@drawable/sty_border_editext"
+                android:drawableLeft="@drawable/ic_padlock"
+                android:drawablePadding="5dp"
+                android:ems="10"
+                android:fontFamily="@font/nimbusreg"
+                android:hint="@string/password_again"
+                android:inputType="textPassword"
+                android:textColorHint="@color/rojoClaro" />
+
+        </LinearLayout>
+    </ScrollView>
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
